update school region stats tab

--- a/school/lsoa/region_stats.Rmd
+++ b/school/lsoa/region_stats.Rmd
@@ -50,9 +50,9 @@ This layer of the PCT uses origin-destination data on travel to school from the 
 
 There were `r prettyNum(sum(z$all), big.mark = ",", scientific = F)` school children living in `r get_pretty_region_name(region)` recorded in the 2011 NSC. All of these children are included in the **zones** data that are visualised on the map interface and available for download.  There were `r prettyNum(sum(d$all), big.mark = ",", scientific = F)` school children attending a school in `r get_pretty_region_name(region)` recorded in the 2011 NSC. All of these children are included in the **destinations** data that are visualised on the map interface and available for download.  
 
-Finally, the **Route Network (LSOA)** is built from all origin-destination fast routes that have have a fast route distance <5km (for primary school children)/<10km (for secondary school children). 
+Finally, the **Route Network (LSOA, clickable)** is built from all origin-destination fast routes within the region that contain at least 5 children and have a fast route distance <5km (for primary school children)/<10km (for secondary school children). 
 
-For more details of methods please see User Manual xx.
+For more details of methods please see the User Manual.
 
 <br>
 ### The `r get_pretty_region_name(region, the=F)` region
