--- a/commute/lsoa/region_stats.Rmd
+++ b/commute/lsoa/region_stats.Rmd
@@ -64,7 +64,7 @@ Adding in inter-regional flows, there were `r prettyNum(sum(od_attributes$all), 
 
 Between-zone LSOA flows exclude **within-LSOA travel**, when the LSOA zone of origin is the same as the zone of destination. Within-LSOA travel is represented by red points on the map when the lines are shown, and accounts for `r prettyNum(sum(c$all), big.mark = ",", scientific = F)` commuters living in `r get_pretty_region_name(region)`.  Between-zone flows also exclude those with no fixed place of work.
  
-The **Route Network (LSOA)** is built from all between-zone LSOA fast routes (including any that start *or* end in `r get_pretty_region_name(region)`) that have a fast route distance <20km. For more details please see User Manual C.
+Finally, the **Route Network (LSOA, clickable)** and the **Route Network (LSOA, image)** are  built from all between-zone LSOA fast routes (including any that start *or* end in `r get_pretty_region_name(region)`). In the online version of the clickable route network, we only present route segments that contain at least `r region_build_param$mingodutch_rnet` cyclists in the Go Dutch scenario. The downloads include all route segments.
 
 See <a target="_blank" href="https://www.jtlu.org/index.php/jtlu/article/view/862">Lovelace et al. (2017)</a> for details of the methods used to estimate the cycling, health and carbon impacts of each scenario, and the methods used to visualise results at the area, line, route and route network level.
 
