--- a/commute/lsoa/region_stats.Rmd
+++ b/commute/lsoa/region_stats.Rmd
@@ -60,7 +60,7 @@ This layer of the PCT uses origin-destination data on travel to work from the 20
 
 Adding in inter-regional flows, there were `r prettyNum(sum(od_attributes$all), big.mark = ",", scientific = F)` commuters living or working in `r get_pretty_region_name(region)` in the 2011 Census, and commuting in a flow containing at least 3 commuters (in either direction).  These commuters are included in the **All flows** files on the data download pages. Flows containing fewer than 3 commuters are excluded from the visualisation and download files for data protection reasons.
 
-**Straight lines**, **Fast routes** and **Quieter routes** are both visualised on the map interface and available to download.  These lines and routes contain all `r prettyNum(region_build_param$n_flow, big.mark = ",", scientific = F)` flows between LSOAs that a) start or end in `r get_pretty_region_name(region)`, b) have a fast route distance <10km, and c) contain at least `r region_build_param$minflow_visualise` commuters (by any mode,  in either direction). These `r prettyNum(region_build_param$n_flow, big.mark = ",", scientific = F)` between-zone LSOA flows contain `r prettyNum(region_build_param$n_people, big.mark = ",", scientific = F)` commuters who either live or work in `r get_pretty_region_name(region)`. 
+**Straight lines**, **Fast routes** and **Quieter routes** are both visualised on the map interface and available to download.  In the downloads, these lines and routes contain all `r prettyNum(region_build_param$n_flow, big.mark = ",", scientific = F)` flows between LSOAs that a) start or end in `r get_pretty_region_name(region)`, b) have a fast route distance <10km, and c) contain at least `r region_build_param$minflow_visualise` commuters (by any mode,  in either direction). These `r prettyNum(region_build_param$n_flow, big.mark = ",", scientific = F)` between-zone LSOA flows contain `r prettyNum(region_build_param$n_people, big.mark = ",", scientific = F)` commuters who either live or work in `r get_pretty_region_name(region)`. To speed up load times, the online map only shows those lines and routes with a fast route distance <10km.
 
 Between-zone LSOA flows exclude **within-LSOA travel**, when the LSOA zone of origin is the same as the zone of destination. Within-LSOA travel is represented by red points on the map when the lines are shown, and accounts for `r prettyNum(sum(c$all), big.mark = ",", scientific = F)` commuters living in `r get_pretty_region_name(region)`.  Between-zone flows also exclude those with no fixed place of work.
 
