--- a/commute/lsoa/region_stats.Rmd
+++ b/commute/lsoa/region_stats.Rmd
@@ -159,19 +159,15 @@ Table 2 illustrates the health and carbon impacts of the different scenarios in 
 
 *Table 2: Health and carbon impacts at baseline and in the scenarios among `r prettyNum(sum(z$all), big.mark = ",", scientific = F)` commuters living in `r get_pretty_region_name(region)`*
 
-| Scenario | Comparison	| Change in deaths/year  | Value of change (million pounds)  | Change in tonnes CO2e/year |
-| -------- |:----------:|:-----------------: |:----------:| :---------------:|
-| Census 2011 |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$govtarget_sldeath_heat) - sum(z$govtarget_sideath_heat) , 2)))` | `r (sprintf('%.2f', round((sum(z$govtarget_slvalue_heat) - sum(z$govtarget_sivalue_heat)) / 1000000  , 2)))` | `r (round( ( sum(z$govtarget_slco2) - sum(z$govtarget_sico2) ) / 1000))` |
-| Government Target (equality) |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$govtarget_sldeath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$govtarget_slvalue_heat) / 1000000  , 2)))` | `r (round( sum(z$govtarget_slco2) / 1000))` |
-|  |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$govtarget_sideath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$govtarget_sivalue_heat) / 1000000  , 2)))` | `r (round( sum(z$govtarget_sico2) / 1000))` |
-| Government Target (near market) |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$govnearmkt_sldeath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$govnearmkt_slvalue_heat) / 1000000  , 2)))` | `r (round( sum(z$govnearmkt_slco2) / 1000))` | 
-|  |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$govnearmkt_sideath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$govnearmkt_sivalue_heat) / 1000000  , 2)))` | `r (round( sum(z$govnearmkt_sico2) / 1000))` |
-| Gender Equality |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$gendereq_sldeath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$gendereq_slvalue_heat) / 1000000  , 2)))` | `r (round( sum(z$gendereq_slco2) / 1000))` | 
-|  |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$gendereq_sideath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$gendereq_sivalue_heat) / 1000000  , 2)))` | `r (round( sum(z$gendereq_sico2) / 1000))` |
-| Go Dutch |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$dutch_sldeath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$dutch_slvalue_heat) / 1000000  , 2)))` | `r (round( sum(z$dutch_slco2) / 1000))` |
-|  |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$dutch_sideath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$dutch_sivalue_heat) / 1000000  , 2)))` | `r (round( sum(z$dutch_sico2) / 1000))` |
-| Ebikes |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$ebike_sldeath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$ebike_slvalue_heat) / 1000000  , 2)))` | `r (round( sum(z$ebike_slco2) / 1000))` |
-|  |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$ebike_sideath_heat) , 2)))` | `r (sprintf('%.2f', round(sum(z$ebike_sivalue_heat) / 1000000  , 2)))` | `r (round( sum(z$ebike_sico2) / 1000))` |
+| Scenario | Comparison	| Change in YLLs/year  | Change in days sick leave/year | Combined value of YLL + sick leave changes (million pounds)  | Change in tonnes CO2e/year |
+| -------- |:----------:|:-----------------: |:----------:| :----------:| :---------------:|
+| Census 2011 |	'No Cyclists' |  `r (sprintf('%.2f', round(sum(z$base_slyll) , 1)))` |  `r (sprintf('%.2f', round(sum(z$base_slsickday) , 1)))` | `r (sprintf('%.2f', round(sum(z$base_slvaluecomb) / 1000000  , 2)))` | `r (round(sum(z$base_slco2) / 1000))` |
+| Government Target (equality)   |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$govtarget_siyll) , 1)))` | `r (sprintf('%.2f', round(sum(z$govtarget_sisickday) , 1)))` |`r (sprintf('%.2f', round(sum(z$govtarget_sivaluecomb) / 1000000  , 2)))` | `r (round( sum(z$govtarget_sico2) / 1000))` |
+| Government Target (near market) |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$govnearmkt_siyll) , 1)))` | `r (sprintf('%.2f', round(sum(z$govnearmkt_sisickday) , 1)))` `r (sprintf('%.2f', round(sum(z$govnearmkt_sivaluecomb) / 1000000  , 2)))` | `r (round( sum(z$govnearmkt_sico2) / 1000))` |
+| Gender Equality |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$gendereq_siyll) , 1)))` | `r (sprintf('%.2f', round(sum(z$gendereq_sisickday) , 1)))` `r (sprintf('%.2f', round(sum(z$gendereq_sivaluecomb) / 1000000  , 2)))` | `r (round( sum(z$gendereq_sico2) / 1000))` |
+| Go Dutch |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$dutch_siyll) , 1)))` | `r (sprintf('%.2f', round(sum(z$dutch_sisickday) , 1)))` `r (sprintf('%.2f', round(sum(z$dutch_sivaluecomb) / 1000000  , 2)))` | `r (round( sum(z$dutch_sico2) / 1000))` |
+| Ebikes  |	Census 2011 |  `r (sprintf('%.2f', round(sum(z$ebike_siyll) , 1)))` | `r (sprintf('%.2f', round(sum(z$ebike_sisickday) , 1)))` `r (sprintf('%.2f', round(sum(z$ebike_sivaluecomb) / 1000000  , 2)))` | `r (round( sum(z$ebike_sico2) / 1000))` |
+YLL = Years of Life Lost
 
 <br>
 ### References
